# bsky-feed-bot

./: .gitignore  Cargo.toml  Dockerfile  buildspec.yml  deploylambda.yml
src/: bsky.rs  dynamodb.rs  feed.rs  main.rs
