[package]
name = "bsky-feed-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
feed-rs = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
lambda_runtime = "0.9.1"
aws_lambda_events = "0.13.1"
chrono = "0.4.34"
bytes = "1.5.0"
scraper = "0.18.1"
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.14.0"
image = "0.24.8"
